Resolve SonarQube issues (#538)